# email-automation

./: .gitignore  DEMO_SAMPLE_EMAILS.md  README.md  pyproject.toml
config/: agents.yaml  filter.example.json  filter.json  trace_spans.json
data/: allocations.csv  customers.csv  distributors.csv  email_automation.db  inbox.json  inventory.csv  locations.csv  products.csv
docs/: AGENTS_CONFIG.md  AZURE_SETUP_GUIDE.md  CORE_WORKFLOW.md  DEMO_WEBHOOK_GUIDE.md  DEMO_WEBHOOK_MINDMAP.md  DIAGRAM_AS_CODE.md  DRAFT_AND_SENT_FLOW.md  FILE_MANIFEST.md  FILTER_CONFIG.md  GRAPH_API_INTEGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PHARMA_TERMS_GUIDE.md  PHOENIX_REVIEW.md  WEBHOOK_DEV_TUNNEL_SETUP.md  WORKFLOW_ARCHITECTURE.md
docs/diagrams/: orchestrator.d2
scripts/: phoenix_demo.py  verify_graph_credentials.py
src/: __init__.py  config.py  llama_index_flow.py  main.py  orchestration_step.py  orchestrator.py  orchestrator_steps.py
src/agents/: __init__.py  aggregate_a11.py  base.py  decision_agent.py  draft_agents.py  email_agent.py  input_agents.py  input_registry.py  registry.py  review_agent.py  s3_scaffold.py
src/auth/: __init__.py  token_cache.py
src/cli/: __init__.py  batch_mode.py  graph_mode.py  interactive_mode.py  shared.py  validate_config.py  webhook_mode.py
src/db/: __init__.py  base.py  seed_data.py
src/mail_provider/: __init__.py  graph_mock.py  graph_models.py  (+3 more)
tests/: test_agent_registry.py  test_aggregate_a11.py  test_analytics_routes.py  test_dedup_store.py  test_email_outcome_repo.py  test_repositories.py  test_s3_scaffold.py  test_span_filter.py
(+40 files in other folders)
